--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="services.html">Services</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -25,30 +24,8 @@
         <img src="#" alt="Hero Image"> <!-- Replace # with your hero image link -->
         <div class="hero-text">
             <h1>Premium Car Detailing</h1>
-            <p>This is where you put a short description about your detailing services.</p>
-            <a href="services.html" class="btn">View Services</a>
-        </div>
-    </section>
-    
-    <section class="services">
-        <h2>Our Services</h2>
-        <p>This is where you put a brief description of your services.</p>
-        <div class="service-list">
-            <div class="service">
-                <img src="#" alt="Service 1 Image"> <!-- Replace # with image link -->
-                <h3>Exterior Detailing</h3>
-                <p>This is where you put a description of the service.</p>
-            </div>
-            <div class="service">
-                <img src="#" alt="Service 2 Image"> <!-- Replace # with image link -->
-                <h3>Interior Detailing</h3>
-                <p>This is where you put a description of the service.</p>
-            </div>
-            <div class="service">
-                <img src="#" alt="Service 3 Image"> <!-- Replace # with image link -->
-                <h3>Ceramic Coating</h3>
-                <p>This is where you put a description of the service.</p>
-            </div>
+            <p>This is where you put a short description about your detailing service.</p>
+            <a href="purchase.html" class="btn">Book Now</a>
         </div>
     </section>
     
@@ -59,4 +36,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
