--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="hero">
         <img src="#" alt="Hero Image"> <!-- Replace # with your hero image link -->
         <div class="hero-text">
-            <h1>Premium Car Detailing</h1>
+            <h1>Flawless Future Detailing</h1>
             <p>This is where you put a short description about your detailing service.</p>
             <a href="purchase.html" class="btn">Book Now</a>
         </div>
