--- a/index.html
+++ b/index.html
@@ -32,6 +32,33 @@
         <img src="#" alt="About Us Image"> <!-- Replace # with your image link -->
     </section>
 
+    <!-- Projects Section -->
+    <section id="projects" class="projects">
+        <h1>Our Work</h1>
+        <p>Check out some of our previous car detailing projects.</p>
+
+        <div class="projects-table">
+            <div class="project-item">
+                <img src="#" alt="Project 1"> <!-- Replace # with your image/video link -->
+            </div>
+            <div class="project-item">
+                <p>This is where you put a description for the project in the top left.</p>
+            </div>
+            <div class="project-item">
+                <p>This is where you put a description for the project in the middle right.</p>
+            </div>
+            <div class="project-item">
+                <img src="#" alt="Project 2"> <!-- Replace # with your image/video link -->
+            </div>
+            <div class="project-item">
+                <img src="#" alt="Project 3"> <!-- Replace # with your image/video link -->
+            </div>
+            <div class="project-item">
+                <p>This is where you put a description for the project in the bottom left.</p>
+            </div>
+        </div>
+    </section>
+
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <h1>Contact Us</h1>
