--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Header Section -->
     <header>
         <div class="logo">
-            <img src="#" alt="Car Detailing Logo"> <!-- Replace # with your logo link -->
+            <img src="https://codehs.com/uploads/174dd0583d4977e141c16c3047a3e3f6" alt="Car Detailing Logo"> <!-- Replace # with your logo link -->
         </div>
     </header>
 
