--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <!-- Header Section -->
     <header>
         <div class="logo">
-            <img src="https://codehs.com/uploads/174dd0583d4977e141c16c3047a3e3f6" alt="Car Detailing Logo"> <!-- Replace # with your logo link -->
+            <img src="https://codehs.com/uploads/174dd0583d4977e141c16c3047a3e3f6" alt="Car Detailing Logo" width="200px"> 
         </div>
+        <h1>Flawless Future Detailing</h1>
     </header>
 
     
